--- a/iOS/Qrefxcode/Qref/css/base-tablet.less
+++ b/iOS/Qrefxcode/Qref/css/base-tablet.less
@@ -19,7 +19,7 @@
     }
 
     .handle {
-        top: 0;
+        top: 3px;
 
         .item {
             height: 4px;
@@ -27,7 +27,7 @@
     }
 
     .add {
-        top: 7px;
+        top: 10px;
     }
 
     .checkmark {
@@ -123,7 +123,7 @@
     }
 
     .icon {
-        padding: 15px 0 15px 15px;
+//        padding: 15px 0 15px 15px;
     }
 }
 
